fixed dst management when sending manual inputs, fixed delay capacitor wiring in circuit

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ Arduino Autopilot Kicad/~Arduino Autopilot.kicad_sch.lck
 Arduino Autopilot Kicad/Arduino Autopilot.kicad_sch-bak
 Arduino Autopilot Kicad/fp-info-cache
 Arduino Autopilot Kicad/Arduino Autopilot.png
+Arduino Autopilot Kicad/#auto_saved_files#
+Arduino Autopilot Kicad/~Arduino Autopilot.kicad_pcb.lck
