--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Arduino Autopilot Kicad/fp-info-cache
 Arduino Autopilot Kicad/Arduino Autopilot.png
 Arduino Autopilot Kicad/#auto_saved_files#
 Arduino Autopilot Kicad/~Arduino Autopilot.kicad_pcb.lck
+Arduino Autopilot Kicad/.DS_Store
