added simplified kicad design

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@ Arduino Autopilot Kicad/Arduino Autopilot.png
 Arduino Autopilot Kicad/#auto_saved_files#
 Arduino Autopilot Kicad/~Arduino Autopilot.kicad_pcb.lck
 Arduino Autopilot Kicad/.DS_Store
+Untitled/fp-info-cache
+Untitled/Untitled.kicad_pcb
+Untitled/Untitled.kicad_prl
+Untitled/Untitled.kicad_pro
+Untitled/Untitled.kicad_sch
+Untitled/Untitled.kicad_sch-bak
+Aurduino Autopilot  Kicad - Simplified/.DS_Store
+Aurduino Autopilot  Kicad - Simplified/#auto_saved_files#
+Aurduino Autopilot  Kicad - Simplified/~Aurduino Autopilot  Kicad - Simplified.kicad_pcb.lck
+Aurduino Autopilot  Kicad - Simplified/~Aurduino Autopilot  Kicad - Simplified.kicad_sch.lck
